fixed wrong padding values on sections

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -6828,6 +6828,9 @@ body {
 nav, .app-content, footer {
   flex-shrink: 0; }
 
+.section {
+  padding: 3rem 0; }
+
 a {
   color: #363636; }
   a:hover {
